fixed #545 Align Logoff button, Version number and box edge on right
git-svn-id: https://subversion.assembla.com/svn/file_sender/filesender/branches/filesender-1.5@889 8555b757-d854-4b86-925a-82fd84c90ff4

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -80,7 +80,7 @@ td {
 #menuright 
 {
 	float: right;
-	padding-left: 20px;
+	padding-right: 10px;
 }
 
 input,textarea  
